--- a/index.html
+++ b/index.html
@@ -1,78 +1,84 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title >heritage page</title>
-	<style>
-              body {
-                    
-                     background-image: url('images/ele.jpg');
-                     background-repeat: no-repeat;
-                     background-size: cover;
-                     color: white;
-              }
-       </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Heritage Page</title>
+    <style>
+        body {
+            background-image: url('images/ele.jpg');
+            background-repeat: no-repeat;
+            background-size: cover;
+            color: white;
+            margin: 0;
+            font-family: Arial, sans-serif;
+        }
+
+        header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 15px;
+        }
+
+        nav {
+            display: flex;
+            gap: 20px;
+        }
+
+        nav a {
+            color: white;
+            text-decoration: none;
+            transition: color 0.3s;
+        }
+
+        nav a:hover {
+            color: gold;
+            text-decoration: underline;
+        }
+
+        section {
+            width: 100%;
+            padding: 20px;
+            box-sizing: border-box;
+        }
+
+        section img {
+            max-width: 100%;
+            height: auto;
+        }
+
+        section h2 {
+            text-align: center;
+            font-size: 30px;
+        }
+    </style>
 </head>
 <body bgcolor="#90e0ef">
-	<TABLE width="100%" border="0" height="100%">
-		<tr>
-        <td width="170" >
-        <a href="homepage.html"><img src ="images/logo.JPG" height="130" width="185"></a></td>
-        <td  colspan="2" height="15"><h1><font face= "BRUSH SCRIPT MT"><marquee>ESCAPE THE ORDINARY AND DISCOVE THE EXTRAORDINARY</marquee> </h1></font></td></tr>
-       
+    <header>
+        <a href="homepage.html"><img src="images/logo.JPG" height="130" width="185" alt="Logo"></a>
+        <h1><font face="BRUSH SCRIPT MT"><marquee>ESCAPE THE ORDINARY AND DISCOVER THE EXTRAORDINARY</marquee></h1></font>
+    </header>
 
-        <tr><td colspan="3" >
-        <h1 align="center"><B><U><font face= "ITC Zapf Chancery" >MOONLEAF TOURISM AT NAIROBI CITY</font></U></B></h1></td></tr>
-        <tr>
-         <td colspan="3" >
-        <h1 align="center"><B><U><font face= "ITC Zapf Chancery" >HERITAGE</font></U></B></h1></td></tr>
+    <nav>
+        <a href="homepage.html">HOME</a>
+        <a href="heritage.html">HERITAGE</a>
+        <a href="hotel booking.html">HOTEL BOOKING</a>
+        <a href="gallery.html">GALLERY</a>
+    </nav>
 
-             <tr>
-    <td colspan="3" align="CENTER"> 
-        | <a href="homepage.html" style="color: white; text-decoration: none;" onmouseover="this.style.color='GOLD';" onmouseout="this.style.color='white';" onclick="this.style.textDecoration='underline';">HOME</a> | &nbsp;
-        | <a href="heritage.html" style="color: white; text-decoration: none;" onmouseover="this.style.color='GOLD';" onmouseout="this.style.color='white';" onclick="this.style.textDecoration='underline';">HERITAGE</a> | &nbsp;
-        | <a href="hotel booking.html" style="color: white; text-decoration: none;" onmouseover="this.style.color='GOLD';" onmouseout="this.style.color='white';" onclick="this.style.textDecoration='underline';">HOTEL BOOKING</a> | &nbsp;
-        | <a href="gallery.html" style="color: white; text-decoration: none;" onmouseover="this.style.color='GOLD';" onmouseout="this.style.color='white';" onclick="this.style.textDecoration='underline';">GALLERY</a> |&nbsp;
-    </td>
-</tr>
+    <section>
+        <a href="DIANI.html"><img src="images/DianiBeachSunriseKenya.jpg" alt="Diani"></a>
+        <h2>Diani</h2>
 
+        <a href="RUMA NATIONAL PARK.html"><img src="images/ruma/case4.jpg" alt="Ruma National Park"></a>
+        <h2>RUMA NATIONAL PARK</h2>
 
-</table>
-<table width="100%">
-	<style>
-    img {
-        max-width: 100%;
-        height: auto;
-    }
-</style>
-	<tr><td><a href="DIANI.html"><img src="images/DianiBeachSunriseKenya.jpg"></a></td></tr>
-	<tr><td align="center" style="font-size: 30px">Diani</td></tr>
+        <a href="TSAVO NATIONAL PARK.html"><img src="images/tsavo.jpg" alt="Tsavo National Park"></a>
+        <h2>TSAVO NATIONAL PARK</h2>
 
-	<tr><td><a href="RUMA NATIONAL PARK.html"><img src="images/ruma/case4.jpg" ></a></td></tr>
-	<tr><td align="center" style="font-size: 30px">RUMA NATIONAL PARK</td></tr>
+        <!-- Add more sections for other destinations -->
 
-	<tr><td><a href="TSAVO NATIONAL PARK.html"><img src="images/tsavo.jpg"></a></td></tr>
-	<tr><td align="center"  style="font-size: 30px">TSAVO NATIONAL PARK</td></tr>
-
-	<tr><td><a href="AMBOSELI RESERVE.html"><img src="images/amboseli.jpg"></a></td></tr>
-	<tr><td align="center" style="font-size: 30px">AMBOSELI RESERVE</td></tr>
-
-	<tr><td><a href="NAROBI NATIONAL PARK.html"><img src="images/nai/case5.jpg" ></a></td></tr>
-	<tr><td align="center" style="font-size: 30px">NAIROBI NATIONAL PARK</td></tr>
-
-	<tr><td><a href="MOUNT KENYA.html"><img src="images/mtkenya/case1.jpg"></a></td></tr>
-	<tr><td align="center" style="font-size: 30px">MOUNT KENYA</td></tr>
-
-	<tr><td><a href="MERU NATIONAL PARK.html"><img src="images/meru1.jpg" ></a></td></tr>
-	<tr><td align="center" style="font-size: 30px">MERU NATIONAL PARK</td></tr>
-
-	<tr><td><a href="MOUNT ELGON NATIONAL PARK.html"><img src="images/elgo.jpg"></a></td></tr>
-	<tr><td align="center" style="font-size: 30px">MOUNT ELGON NATIONAL PARK</td></tr>
-
-	<tr><td><a href="MOUNT LONGONOT NATIONAL PARK.html"><img src="images/mtlongo.jpg"></a></td></tr>
-	<tr><td align="center" style="font-size: 30px">MOUNT LONGONOT NATIONAL PARK</td></tr>
-
-	<tr><td><a href="SIBILOI NATIONAL PARK.html"><img src="images/sibi1.jpg" ></a></td></tr>
-	<tr><td align="center" style="font-size: 30px">SIBILOI NATIONAL PARK</td></tr>
-</table>
+    </section>
 </body>
 </html>
